first draft of cross model saving in mongo db from soap connector

--- a/gensoapn/.eslintrc
+++ b/gensoapn/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "loopback"
-}
+    "extends": ["airbnb", "prettier"],
+    "plugins": ["prettier"],
+    "rules": {
+      "prettier/prettier": ["error"]
+    }
+  }
