--- a/gensoapn/server/model-config.json
+++ b/gensoapn/server/model-config.json
@@ -16,5 +16,9 @@
   "numberConvModel": {
     "dataSource": "numberSoap",
     "public": true
+  },
+  "numStore": {
+    "dataSource": "mongoDBnumSaver",
+    "public": true
   }
 }
