--- a/gensoapn/package.json
+++ b/gensoapn/package.json
@@ -16,8 +16,9 @@
     "helmet": "^3.10.0",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
-    "loopback-connector-soap": "^4.3.0",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-connector-mongodb": "^4.2.0",
+    "loopback-connector-soap": "^4.3.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
